# rustbasics

./: README.md
hellorust/: README.md
hellorustcli/: Cargo.toml  README.md
hellorustcli/src/: main.rs
hellorustgtk4/: Cargo.toml  README.md
hellorustgtk4/src/: main.rs
hellorusticed/: Cargo.toml  README.md
hellorusticed/src/: download.rs  main.rs
hellorustqtcargo/: Cargo.toml  README.md  build.rs
hellorustqtcargo/qml/: main.qml
hellorustqtcargo/src/: cxxqt_object.rs  main.rs
rustgtk4examples/rustgtk4textviewer/: Cargo.toml  README.md
rustgtk4examples/rustgtk4textviewer/src/: main.rs  text_viewer.ui
swet/: Cargo.toml  README.md
swet/src/: main.rs
swet/src/cmd/: mod.rs
swet/src/cmd/baseconv/: mod.rs
